使用 Colaboratory 建立

--- a/Sepsis death prediction by machine learning 20230809.ipynb
+++ b/Sepsis death prediction by machine learning 20230809.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "Code from Chin-Chieh Wu (Chang Gung University)"
+      ],
+      "metadata": {
+        "id": "s8MfJwPg_LQ5"
+      },
+      "id": "s8MfJwPg_LQ5"
+    },
+    {
+      "cell_type": "markdown",
       "id": "946a71a5",
       "metadata": {
         "id": "946a71a5"
